Replace wrapper methods