@@ -1,7 +1,7 @@
 package com.exasol.cloudetl.kafka.deserialization;
 
-import static com.exasol.cloudetl.kafka.TestCollections.*;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.lenient;
 
 import java.util.Arrays;
@@ -34,75 +34,77 @@ class RowBuilderTest {
 
     @Test
     void emitsRecordKeyAndValue() {
-        assertSeqEquals(List.of("key", "value"), RowBuilder.buildRow(seq(RecordKey.INSTANCE, RecordValue.INSTANCE),
-                createRecord(map(entry(RecordKey.INSTANCE, seq("key"))), map(entry(RecordValue.INSTANCE, seq("value")))), 0));
+        assertEquals(List.of("key", "value"), RowBuilder.buildRow(List.of(RecordKey.INSTANCE, RecordValue.INSTANCE),
+                createRecord(Map.of(RecordKey.INSTANCE, List.of("key")),
+                        Map.of(RecordValue.INSTANCE, List.of("value"))), 0));
     }
 
     @Test
     void emitsRecordTimestampKeyAndValue() {
-        assertSeqEquals(List.of("key", "value", TIMESTAMP),
-                RowBuilder.buildRow(seq(RecordKey.INSTANCE, RecordValue.INSTANCE, TimestampField.INSTANCE),
-                        createRecord(map(entry(RecordKey.INSTANCE, seq("key"))), map(entry(RecordValue.INSTANCE, seq("value")))), 0));
+        assertEquals(List.of("key", "value", TIMESTAMP),
+                RowBuilder.buildRow(List.of(RecordKey.INSTANCE, RecordValue.INSTANCE, TimestampField.INSTANCE),
+                        createRecord(Map.of(RecordKey.INSTANCE, List.of("key")),
+                                Map.of(RecordValue.INSTANCE, List.of("value"))), 0));
     }
 
     @Test
     void emitsNullForKeyWhenKeyIsNull() {
-        assertSeqEquals(Arrays.asList(null, "value"), RowBuilder.buildRow(seq(RecordKey.INSTANCE, RecordValue.INSTANCE),
-                createRecord(null, map(entry(RecordValue.INSTANCE, seq("value")))), 0));
+        assertEquals(Arrays.asList(null, "value"), RowBuilder.buildRow(List.of(RecordKey.INSTANCE, RecordValue.INSTANCE),
+                createRecord(null, Map.of(RecordValue.INSTANCE, List.of("value"))), 0));
     }
 
     @Test
     void emitsNullForValueWhenValueIsNull() {
-        assertSeqEquals(Arrays.asList("key", null), RowBuilder.buildRow(seq(RecordKey.INSTANCE, RecordValue.INSTANCE),
-                createRecord(map(entry(RecordKey.INSTANCE, seq("key"))), null), 0));
+        assertEquals(Arrays.asList("key", null), RowBuilder.buildRow(List.of(RecordKey.INSTANCE, RecordValue.INSTANCE),
+                createRecord(Map.of(RecordKey.INSTANCE, List.of("key")), null), 0));
     }
 
     @Test
     void emitsNullForValuesForConcreteFields() {
-        assertSeqEquals(Arrays.asList("value1", null),
-                RowBuilder.buildRow(seq(new RecordValueField("field1"), new RecordValueField("field2")),
-                        createRecord(null, map(entry(new RecordValueField("field1"), seq("value1")))), 0));
+        assertEquals(Arrays.asList("value1", null),
+                RowBuilder.buildRow(List.of(new RecordValueField("field1"), new RecordValueField("field2")),
+                        createRecord(null, Map.of(new RecordValueField("field1"), List.of("value1"))), 0));
     }
 
     @Test
     void emitsNullColumnsWhenAllFieldsFromRecordValueAreNull() {
-        assertSeqEquals(Arrays.asList(null, null),
-                RowBuilder.buildRow(seq(RecordValueFields.INSTANCE), createRecord(null, null), 2));
+        assertEquals(Arrays.asList(null, null),
+                RowBuilder.buildRow(List.of(RecordValueFields.INSTANCE), createRecord(null, null), 2));
     }
 
     @Test
     void combinesPresentFieldWithAllFieldReference() {
-        assertSeqEquals(List.of(1, 2, 3, TIMESTAMP),
-                RowBuilder.buildRow(seq(RecordValueFields.INSTANCE, TimestampField.INSTANCE),
-                        createRecord(null, map(entry(RecordValueFields.INSTANCE, seq(1, 2, 3)))), 2));
+        assertEquals(List.of(1, 2, 3, TIMESTAMP),
+                RowBuilder.buildRow(List.of(RecordValueFields.INSTANCE, TimestampField.INSTANCE),
+                        createRecord(null, Map.of(RecordValueFields.INSTANCE, List.of(1, 2, 3))), 2));
     }
 
     @Test
     void emitsCorrectColumnCountWhenRecordValueIsNull() {
-        assertSeqEquals(Arrays.asList("ourKey", null, null, TIMESTAMP),
-                RowBuilder.buildRow(seq(RecordKey.INSTANCE, RecordValueFields.INSTANCE, TimestampField.INSTANCE),
-                        createRecord(map(entry(RecordKey.INSTANCE, seq("ourKey"))), null), 4));
+        assertEquals(Arrays.asList("ourKey", null, null, TIMESTAMP),
+                RowBuilder.buildRow(List.of(RecordKey.INSTANCE, RecordValueFields.INSTANCE, TimestampField.INSTANCE),
+                        createRecord(Map.of(RecordKey.INSTANCE, List.of("ourKey")), null), 4));
     }
 
     @Test
     void worksWithTwoAllFieldsReferences() {
-        assertSeqEquals(List.of("key1", TIMESTAMP, "val1", "val2"),
-                RowBuilder.buildRow(seq(RecordKeyFields.INSTANCE, TimestampField.INSTANCE, RecordValueFields.INSTANCE),
-                        createRecord(map(entry(RecordKeyFields.INSTANCE, seq("key1"))),
-                                map(entry(RecordValueFields.INSTANCE, seq("val1", "val2")))),
+        assertEquals(List.of("key1", TIMESTAMP, "val1", "val2"),
+                RowBuilder.buildRow(List.of(RecordKeyFields.INSTANCE, TimestampField.INSTANCE, RecordValueFields.INSTANCE),
+                        createRecord(Map.of(RecordKeyFields.INSTANCE, List.of("key1")),
+                                Map.of(RecordValueFields.INSTANCE, List.of("val1", "val2"))),
                         4));
     }
 
     @Test
     void worksWithTwoAllFieldsReferencesWhenOneIsNull() {
-        assertSeqEquals(Arrays.asList(null, null, TIMESTAMP, "val1", "val2"),
-                RowBuilder.buildRow(seq(RecordKeyFields.INSTANCE, TimestampField.INSTANCE, RecordValueFields.INSTANCE),
-                        createRecord(null, map(entry(RecordValueFields.INSTANCE, seq("val1", "val2")))), 5));
+        assertEquals(Arrays.asList(null, null, TIMESTAMP, "val1", "val2"),
+                RowBuilder.buildRow(List.of(RecordKeyFields.INSTANCE, TimestampField.INSTANCE, RecordValueFields.INSTANCE),
+                        createRecord(null, Map.of(RecordValueFields.INSTANCE, List.of("val1", "val2"))), 5));
     }
 
     @Test
     void failsWithTwoAllFieldsReferencesAndNullValue() {
-        final List<GlobalFieldSpecification> fieldSequence = seq(RecordKeyFields.INSTANCE, TimestampField.INSTANCE, RecordValueFields.INSTANCE);
+        final List<GlobalFieldSpecification> fieldSequence = List.of(RecordKeyFields.INSTANCE, TimestampField.INSTANCE, RecordValueFields.INSTANCE);
         final ConsumerRecord<Map<FieldSpecification, List<Object>>, Map<FieldSpecification, List<Object>>> consumerRecord = createRecord(null, null);
         assertThrows(KafkaConnectorException.class, () -> RowBuilder.buildRow(fieldSequence, consumerRecord, 4));
     }
